--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ It will not impact the appearance and can give developers a lot of support :)
 
         <!--Copyright-->
         <div id="copyright">
-            Copyright&nbsp;©<script type="text/javascript">var fd = new Date();document.write("&nbsp;" + fd.getFullYear() + "&nbsp;");</script>Damon Lee 's blog  <a href="https://beian.miit.gov.cn/" target="_blank">冀ICP备17008268号</a>  <a href="https://beian.miit.gov.cn/" target="_blank">冀ICP备17008268号</a>
+            Copyright&nbsp;©<script type="text/javascript">var fd = new Date();document.write("&nbsp;" + fd.getFullYear() + "&nbsp;");</script>Damon Lee 's blog  <a href="https://beian.miit.gov.cn/" target="_blank">冀ICP备17008268号-1</a>  <a href="https://beian.miit.gov.cn/" target="_blank">冀ICP备17008268号</a>
         </div>
 
         <!-- Paradox Footer Right Section -->
